# discord_gif_extractor

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: gif_extractor.cc  gif_extractor.h  main.cc
src/proto/: FrecencyUserSettings.proto
